# a-proper-one

./: .gitignore  Dockerfile  README.md  a_proper_one.py  a_proper_one.yaml  docker-compose.a_proper_one.standalone.yml  pyproject.toml
.github/workflows/: deploy.yml
app/a_proper_one/: a_proper_one.py  pyproject.toml
app/a_proper_one/tests/integration/: test_api.py
app/a_proper_one/tests/unit/: test_a_proper_one.py
infra/: .gitignore  README.md  main.tf  outputs.tf  variables.tf
